# TatekBot

./: README.md
src/tatekbot_action_interfaces/: CMakeLists.txt  package.xml
src/tatekbot_client/: package.xml  setup.cfg  setup.py
src/tatekbot_client/tatekbot_client/: fallow_field_row.py
src/tatekbot_control/: CMakeLists.txt  package.xml  setup.py
src/tatekbot_control/config/: controller_config.yaml
src/tatekbot_control/launch/: four_ws_control.launch.py
src/tatekbot_control/scripts/: joy.py  robot_control.py
src/tatekbot_description/: CMakeLists.txt  package.xml
src/tatekbot_description/launch/: robot_sim.launch.py  robot_spawner.launch.py  robot_state_publisher.launch.py  tatekbot_display.launch.py
src/tatekbot_description/meshes/: BL_motor.STL  BR_motor.STL  BR_steering.STL  FL_steering.STL  FR_motor.STL  FR_steering.STL  base_footprint.STL  base_link.STL  front_camera.STL
src/tatekbot_description/models/tatekbot/: model.config  tatekbotV2.sdf
src/tatekbot_description/models/tatekbot/config/: controllers.yaml
src/tatekbot_description/models/tatekbot/control/: control.txt
src/tatekbot_description/models/tatekbot/meshes/: BL_steering.STL  FL_motor.STL  back_cam.STL  bottom_cam.STL  left_cam.STL  right_cam.STL
src/tatekbot_description/rviz/: tatekbot.rviz
src/tatekbot_description/urdf/: tatekbotV2.sdf  tatekbotV2.urdf
src/tatekbot_description/worlds/: farm.model  farm.sdf
src/tatekbot_server/: package.xml  setup.cfg  setup.py
src/tatekbot_server/tatekbot_server/: follow_field_row.py
src/tatekbot_server/tatekbot_server/field_row_detection/: ImageProcessor.py  ShowImages.py  contours.py  featureMatching.py  geometric.py  imageProc.py  movingVariance.py
